--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "laravel/framework": "^12",
     "kyslik/column-sortable": "^7.0",
-    "laravel/sanctum": "^4"
+    "laravel/sanctum": "^4",
+    "laravel/tinker": "^2.10"
   },
   "require-dev": {
     "laravel/breeze": "*"
