feat(student):student layouts/subnav導入&学生画面をレイアウト統一、ナビ追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: ./infra/php
     volumes:
       - ./src:/data
+    working_dir: /data
     depends_on:
       - db
       - mailhog
